[gd_scene load_steps=8 format=3 uid="uid://ctbwwetrly8nm"]

[ext_resource type="Script" path="res://src/scenes/Boss/boss.gd" id="1_vj3im"]
[ext_resource type="SpriteFrames" uid="uid://csg81kxdleg58" path="res://src/scenes/Boss/animation.tres" id="2_73www"]
[ext_resource type="FontFile" uid="uid://iq5rlx86qvrr" path="res://assets/Fonts/PixelOperator8.ttf" id="2_n05qq"]
[ext_resource type="PackedScene" uid="uid://dfaro8xkqeh06" path="res://src/scenes/Killzone/killzone.tscn" id="2_uvtrr"]
[ext_resource type="AudioStream" uid="uid://btbyn1c6utim0" path="res://assets/Pixel Adventure/Sounds/swoosh.mp3" id="4_wwwqp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmkqe"]
size = Vector2(8.625, 16.8333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8s6lo"]
size = Vector2(12, 17.2083)

[node name="Boss" type="CharacterBody2D" node_paths=PackedStringArray("bullet_markers") groups=["Boss"]]
scale = Vector2(6, 6)
collision_layer = 512
collision_mask = 515
script = ExtResource("1_vj3im")
bullet_markers = [NodePath("Markers/BulletMarker_1"), NodePath("Markers/BulletMarker_2"), NodePath("Markers/BulletMarker_3"), NodePath("Markers/BulletMarker_4"), NodePath("Markers/BulletMarker_5"), NodePath("Markers/BulletMarker_6")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.6, 0.6)
sprite_frames = ExtResource("2_73www")
animation = &"light_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.0625, 4.41667)
shape = SubResource("RectangleShape2D_cmkqe")

[node name="Killzone" parent="." instance=ExtResource("2_uvtrr")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 4.27083)
shape = SubResource("RectangleShape2D_8s6lo")

[node name="WeaponTimer" type="Timer" parent="."]

[node name="SwapTimer" type="Timer" parent="."]

[node name="ThrowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wwwqp")
volume_db = -10.0
bus = &"SFX"

[node name="Markers" type="Node2D" parent="."]

[node name="BulletMarker_1" type="Marker2D" parent="Markers"]
position = Vector2(-8, -3)

[node name="BulletMarker_2" type="Marker2D" parent="Markers"]
position = Vector2(-8, 0)

[node name="BulletMarker_3" type="Marker2D" parent="Markers"]
position = Vector2(-8, 3)

[node name="BulletMarker_4" type="Marker2D" parent="Markers"]
position = Vector2(-8, 6)

[node name="BulletMarker_5" type="Marker2D" parent="Markers"]
position = Vector2(-8, 9)

[node name="BulletMarker_6" type="Marker2D" parent="Markers"]
position = Vector2(-8, 12)

[node name="Health" type="Label" parent="."]
offset_left = -4.0
offset_top = -15.5
offset_right = 10.0
offset_bottom = -7.5
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = ExtResource("2_n05qq")
theme_override_font_sizes/font_size = 8
text = "20"
horizontal_alignment = 1
vertical_alignment = 1
